--- a/net/build.gradle
+++ b/net/build.gradle
@@ -54,7 +54,7 @@ dependencies {
     androidTestImplementation "androidx.test:runner:1.3.0"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.3.0"
 
-    compileOnly "com.squareup.okhttp3:okhttp:$okhttp_version"
+    api "com.squareup.okhttp3:okhttp:$okhttp_version"
 
     compileOnly "com.github.liangjingkanji:BRV:$brv_version"
     compileOnly "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
