--- a/net/build.gradle
+++ b/net/build.gradle
@@ -46,11 +46,8 @@ android {
 dependencies {
     api fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.3.1'
-    testImplementation "junit:junit:4.13.2"
-    androidTestImplementation "androidx.test:runner:1.3.0"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.3.0"
 
-    api "com.squareup.okhttp3:okhttp:$okhttp_version"
+    api "com.squareup.okhttp3:okhttp:3.12.13"
 
     compileOnly "com.github.liangjingkanji:BRV:$brv_version"
     compileOnly "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
