--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -80,9 +80,9 @@ dependencies {
     implementation "com.google.android.material:material:1.3.0"
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    implementation 'com.android.support:multidex:2.0.0'
 
     implementation project(path: ":net")
-    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
 
     // ------------------------------配合Net使用的库-------------------------------------
     implementation "com.github.liangjingkanji:BRV:$brv_version" // 提供自动分页/缺省页/自动下拉刷新功能
@@ -103,5 +103,5 @@ dependencies {
     implementation 'com.github.liangjingkanji:StatusBar:2.0.2' // 透明状态栏
     implementation 'com.github.liangjingkanji:debugkit:1.3.0' // 开发调试窗口工具
     implementation "com.github.liangjingkanji:Tooltip:1.2.1" // 吐司工具
-    implementation 'com.github.liangjingkanji:Engine:0.0.64'
+    implementation 'com.github.liangjingkanji:Engine:0.0.65'
 }
