--- a/net/build.gradle
+++ b/net/build.gradle
@@ -44,6 +44,7 @@ android {
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.startup:startup-runtime:1.0.0'
 
     api "com.squareup.okhttp3:okhttp:3.12.13"
 
